--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <button onclick="click1(4)" class="btn">4</button>
                     <button onclick="click1(5)" class="btn">5</button>
                     <button onclick="click1(6)" class="btn">6</button>
-                    <button onclick="click1('x')" class="btn">x</button>
+                    <button onclick="click1('*')" class="btn">x</button>
                 </div>
                 <div class="row">
                     <button onclick="click1(1)" class="btn">1</button>
